Remove unused actions and clean up code in issues and projects controllers; update contributor view for better sorting
